FIX Directory paths relative to root are now compatible with the new chained path system